# ODrive

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists_template.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  LICENSE.md  Makefile  ODriveFirmware.launch  ODrive_Workspace.code-workspace  Odrive.ioc  Odrive.xml  OdriveFirmware.launch  README.md  STM32F405RGTx_FLASH.ld  Tupfile.lua  _config.yaml  ascii-protocol.md  async_stream.hpp  axis.cpp  axis.hpp  board_config_v3.h  bootup.py  channel_discoverer.cpp  commands.md  developer-guide.md  dockerbuild.sh  encoders.md  getting-started.md  interfaces.md  interfaces_template.j2  legacy_object_client.cpp  legacy_object_client.hpp  legacy_protocol.cpp  legacy_protocol.hpp  (+12 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compile.yaml  documentation.yml  firmware.yaml  nightly.yaml  release.yaml
Arduino/ArduinoI2C/: odrive_endpoints.h  type_traits.h
Arduino/ODriveArduino/: LICENSE  ODriveArduino.cpp  ODriveArduino.h  ODriveEnums.h  README.md  enums.h
ArduinoI2C/: ArduinoI2C.ino  odrive.h  odrive_endpoints.h
CMake_Helpers/: CMake_Create_Build_Folder.py  CMake_Find_Include_Dirs.py  CMake_Read_TUP_Config.py  CMake_Remove_Build_Folder.py
Drivers/DRV8301/: drv8301.c  drv8301.h
Firmware/: .clang-format  .gitignore  CHANGELOG.md  FreeRTOS-openocd.c  HAL_Config.lua  LICENSE  Makefile  ODriveFirmware.launch  Odrive.ioc  README.md  STM32F405RGTx_FLASH.ld  Tupfile.lua  Tuprules.lua  adc.hpp  adctest.py  ascii_type_info_template.j2  build.lua  build.sh  cmsis_event_loop.cpp  cmsis_event_loop.hpp  configuring-eclipse.md  configuring-vscode.md  current_sensor.hpp  devices.hpp  dump_version.sh  encoders.md  find_programmer.sh  flash_stlink.sh  freertos_vars.h  interface_generator.py  interface_generator_stub.py  legacy-protocol.md  odrive-interface.yaml  protocol.md  sampler.py  syscalls.c  test-rig.yaml  tup.config  tup.config.default  upload.sh
Firmware/Board/: HAL_Config.c  HAL_Config.h  board_config.h
Firmware/ConfigBackUp/: MotorMuaTaobao.json  odrive-config-20813594524B.json
Firmware/Drivers/: gate_driver.hpp  ma732.cpp  ma732.hpp  status_led.cpp  status_led.hpp  ws2812.hpp
Firmware/Encoders/: absolute_encoder.hpp  amt203.cpp  amt203.hpp
Firmware/Inc/: FreeRTOSConfig.h  adc.h  can.h  dma.h  freertos_vars.h  gpio.h  main.h  mxconstants.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
Firmware/MotorControl/: acim_estimator.cpp  acim_estimator.hpp  arm_cos_f32.c  arm_sin_f32.c  ascii_protocol.c  ascii_protocol.cpp  axis.cpp  (+84 more)
GUI/: .gitignore  LICENSE.md  README.md  package-lock.json  package.json  vue.config.js
Inc/: FreeRTOSConfig.h  adc.h  can.h  freertos_vars.h  gpio.h  main.h  main_ODRIVE_V3_2.h  main_ODRIVE_V3_3.h  mxconstants.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  stm32f4xx_it_ODRIVE_V3_2.h  stm32f4xx_it_ODRIVE_V3_3.h  tim.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h  version.h
MotorControl/: axis.cpp  axis.hpp  axis_c_interface.h  boards.h  callbacks.c  callbacks.cpp  callbacks.h  commands.c  commands.cpp  commands.h  configuration.h  constants.c  constants.cpp  constants.h  controller.c  controller.cpp  controller.h  encoder.cpp  encoder.h  error.cpp  error.h  low_level.c  low_level.cpp  low_level.h  motor.c  motor.cpp  motor.h  motor_error.h  odrive_commands.c  odrive_commands.h  odrive_configuration.h  odrive_constants.c  odrive_constants.h  odrive_error.h  protocol.cpp  protocol.h  sensorless.cpp  sensorless.h  test.c  test.h  (+5 more)
MworkTest/: Motor 9235  README.md  mWorkConfigMotor.md
Src/: adc.c  adc_ODRIVE_V3_2.c  adc_ODRIVE_V3_3.c  can.c  dma.c  freertos.c  gpio.c  gpio_ODRIVE_V3_3.c  main.c  odrive.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  stm32f4xx_it_ODRIVE_V3_2.c  stm32f4xx_it_ODRIVE_V3_3.c  syscalls.c  test.c  tim.c  usart.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
Test/: test.c  test.h
_data/: index.yaml
_layouts/: default.html
analysis/: filterpoles.py  thermistors.py
configs/: linux-amd64.config  linux-armhf.config  wasm.config  windows-amd64.config
cpp/: posix_udp.cpp
docs/: .gitignore  CNAME  Makefile  _config.yaml  analog-input.html  analog-input.md  analog-input.rst  anticogging.html  anticogging.md  ascii-protocol.html  ascii-protocol.md  can-example.py  can-guide.html  can-guide.md  can-guide.rst  can-protocol.html  can-protocol.md  can-protocol.rst  changelog.rst  commands.html  commands.md  commands.rst  conf.py  configuring-eclipse.html  configuring-vscode.html  configuring-vscode.md  control-modes.html  control-modes.md  control-modes.rst  control.html  control.md  control.rst  developer-guide.html  developer-guide.md  encoders.html  encoders.md  encoders.rst  endstops.html  endstops.md  endstops.rst  (+50 more)
fibre/: libfibre.py
motor_analysis/: VelliPlot.m
numeric_path_opt/: Main.m
platform_support/: epoll_event_loop.cpp  libusb_transport.cpp  posix_socket.cpp  posix_socket.hpp  posix_tcp_backend.cpp
python-interface/: ControlMode.py  CurrentControl.py  Motor.py  ODrive.py  README.md  Rotor.py  WebSocketServer.py  generate_api.py  generate_mapping.py  interface.html
startup/: startup_stm32f405xx.s
stm32cubemx/: .gitignore  Odrive.ioc
tools/: .gitignore  abs_liveplotter.py  ac_motor.py  arduino_enums_template.j2  brush_simple.py  brushed.json  brushed_3_30_2020.json  build.sh  can_async_example.py  can_dbc_example.py  can_example.py  create_can_dbc.py  demo.py  dfu.py  drv_status.py  enums_template.j2  explore_odrive.py  licenseStamper.py  liveplotter.py  odrive-cansimple.dbc  odrive_brushed.py  odrive_demo.py  odrive_header_template.h.in  odrivetool  odrivetool.bat  odrvtool  plot_oscilloscope.py  rate_test.py  run_tests.py  setup.py  setup_hall_as_index.py  test-rig-jw.yaml  test-rig-loopback.yaml  test-rig-parallel.yaml  test-rig-pj.yaml  test-rig-rpi.yaml  test-rig-rpi4.yaml  test-rig-ss3.yaml  test-rig-ss4.yaml  test-rig.yaml  (+3 more)
tupfiles/: build.lua
various/: path.c
(+794 files in other folders)
